--- a/.github/workflows/ci-noetic.yml
+++ b/.github/workflows/ci-noetic.yml
@@ -38,6 +38,7 @@ jobs:
         env:
           ROS_REPO: testing
           CODE_COVERAGE: "codecov.io"
+          CODE_COVERAGE_EXCLUDES: "*/src/substract.cpp"
       - uses: codecov/codecov-action@v1
 
   coveralls:
@@ -49,5 +50,6 @@ jobs:
         env:
           ROS_REPO: testing
           CODE_COVERAGE: "coveralls.io"
+          CODE_COVERAGE_EXCLUDES: "*/src/substract.cpp"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_SERVICE_NAME: github
