--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
 )
 
+catkin_python_setup()
+
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ros_testing_demo_pkg
@@ -43,9 +45,13 @@ if(CATKIN_ENABLE_TESTING)
     append_coverage_compiler_flags()
   endif()
 
+  catkin_add_nosetests(test/unittest_multiply.py)
+
   catkin_add_gtest(unittest_add
                   test/unittest_add.cpp)
   target_link_libraries(unittest_add ${PROJECT_NAME}-lib)
+
+
 
 
   # generate coverage report using CATKIN_MAKE:
@@ -54,9 +60,13 @@ if(CATKIN_ENABLE_TESTING)
   # generate coverage report using CATKIN:
   # catkin config --cmake-args -DENABLE_COVERAGE_TESTING=ON -DCMAKE_BUILD_TYPE=Debug
   # catkin build
-  # catkin build psen_scan_v2 -j1 -v --no-deps --catkin-make-args ros_testing_demo_pkg_coverage
+  # catkin build ros_testing_demo_pkg -j1 -v --no-deps --catkin-make-args ros_testing_demo_pkg_coverage
+  #
+  # See the results (assumin currently at catkin_ws)
+  # Cpp: see $PWD/build/ros_testing_demo_pkg/ros_testing_demo_pkg_coverage/index.html
+  # Python: see $HOME/.ros/htmlcov/index.html
   if(ENABLE_COVERAGE_TESTING)
-    set(COVERAGE_EXCLUDES "*/${PROJECT_NAME}/test*")
+    set(COVERAGE_EXCLUDES "*/${PROJECT_NAME}/test*" "*/src/substract.cpp")
     add_code_coverage(
       NAME ${PROJECT_NAME}_coverage
       DEPENDS tests
